--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
     <div class="menu">
       <div class="menu-item">
         <h3>Orange Juice</h3>
-        <p>₹60</p>
-      </div>
-      <div class="menu-item">
-        <h3>Mango Shake</h3>
         <p>₹80</p>
       </div>
       <div class="menu-item">
+        <h3>Mango Shake</h3>
+        <p>₹60</p>
+      </div>
+      <div class="menu-item">
         <h3>Mixed Fruit Juice</h3>
-        <p>₹100</p>
+        <p>₹40</p>
       </div>
       <div class="menu-item">
         <h3>Cold Coffee</h3>
-        <p>₹70</p>
+        <p>₹60</p>
       </div>
     </div>
   </section>  <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>Visit us at: Near Main Market, Aurangabad</p>
-    <p>Phone: +91 9876543210</p>
-    <a href="https://wa.me/919876543210" target="_blank">Chat on WhatsApp</a>
+    <p>Visit us at: Near Jammu and kashmir bank opp. PaithanGate, Aurangabad.431001</p>
+    <p>Phone: +91 9970123235</p>
+    <a href="https://wa.me/919970123235" target="_blank">Chat on WhatsApp</a>
   </section>  <footer>
     <p>© 2025 Great Lucky Juice Centre. All Rights Reserved.</p>
   </footer>
