--- a/index.html
+++ b/index.html
@@ -70,23 +70,133 @@
   </section>  <section id="menu">
     <h2>Our Menu</h2>
     <div class="menu">
-      <div class="menu-item">
-        <h3>Orange Juice</h3>
-        <p>₹80</p>
-      </div>
-      <div class="menu-item">
-        <h3>Mango Shake</h3>
-        <p>₹60</p>
-      </div>
-      <div class="menu-item">
-        <h3>Mixed Fruit Juice</h3>
-        <p>₹40</p>
-      </div>
-      <div class="menu-item">
-        <h3>Cold Coffee</h3>
-        <p>₹60</p>
-      </div>
+   /* --- MENU STYLES --- */
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 18px;
+}
+.menu-card {
+  background: #2a1b12;
+  padding: 16px;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0,0,0,.25);
+}
+.menu-card h3 {
+  margin: 0 0 10px;
+  color: #ff8a33;
+}
+.menu-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.menu-list li {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 8px 0;
+  border-bottom: 1px dashed rgba(255,255,255,.1);
+}
+.menu-list li:last-child { border-bottom: 0; }
+.price { white-space: nowrap; color: #ffd9b3; }
+.note { font-size: .9rem; opacity: .8; margin-top: 8px; }
+.btn {
+  display:inline-block; padding:10px 16px; border-radius:8px;
+  background:#25d366; color:#fff; text-decoration:none; font-weight:600;
+}
+.btn.alt { background:#444; }<section id="menu">
+  <h2>Our Menu</h2>
+
+  <div class="menu-grid">
+
+    <!-- Juices -->
+    <div class="menu-card">
+      <h3>Juice</h3>
+      <ul class="menu-list">
+        <li><span>Pineapple</span><span class="price">₹50</span></li>
+        <li><span>Sweet Lime (Mosambi)</span><span class="price">₹50</span></li>
+        <li><span>Apple</span><span class="price">₹60</span></li>
+        <li><span>Orange</span><span class="price">₹80</span></li>
+        <li><span>Ganga Jamuna</span><span class="price">₹60</span></li>
+        <li><span>Pomegranate</span><span class="price">₹90</span></li>
+      </ul>
+      <div class="note">* Make in mineral water</div>
     </div>
+
+    <!-- Pure Juice -->
+    <div class="menu-card">
+      <h3>Pure Juice</h3>
+      <ul class="menu-list">
+        <li><span>Sweet Lime</span><span class="price">₹70</span></li>
+        <li><span>Orange</span><span class="price">₹100</span></li>
+        <li><span>Ganga Jamuna</span><span class="price">₹70</span></li>
+      </ul>
+    </div>
+
+    <!-- Milk Shake -->
+    <div class="menu-card">
+      <h3>Milk Shake</h3>
+      <ul class="menu-list">
+        <li><span>Cocktail (Mix Fruit)</span><span class="price">₹40</span></li>
+        <li><span>Papaya</span><span class="price">₹30</span></li>
+        <li><span>Pineapple</span><span class="price">₹40</span></li>
+        <li><span>Chickoo</span><span class="price">₹50</span></li>
+        <li><span>Fig (Anjeer)</span><span class="price">₹50</span></li>
+        <li><span>Custard Apple (Sitaphal)</span><span class="price">₹100</span></li>
+      </ul>
+    </div>
+
+    <!-- Spl. Milk Shake -->
+    <div class="menu-card">
+      <h3>Spl. Milk Shake</h3>
+      <ul class="menu-list">
+        <li><span>Cocktail Mix Fruit</span><span class="price">₹60</span></li>
+        <li><span>Chocolate Milk Shake</span><span class="price">₹60</span></li>
+        <li><span>Cold Coffee</span><span class="price">₹60</span></li>
+        <li><span>Pineapple</span><span class="price">₹70</span></li>
+        <li><span>Butter Scotch</span><span class="price">₹70</span></li>
+      </ul>
+      <div class="note">+ and many more ice cream flavours</div>
+    </div>
+
+    <!-- Mastani -->
+    <div class="menu-card">
+      <h3>Mastani</h3>
+      <ul class="menu-list">
+        <li><span>Mango Mastani</span><span class="price">₹100</span></li>
+        <li><span>Chocolate Mastani</span><span class="price">₹100</span></li>
+        <li><span>Kesar Mastani</span><span class="price">₹100</span></li>
+        <li><span>Anjeer Badam</span><span class="price">₹130</span></li>
+        <li><span>Sitaphal (Custard Apple)</span><span class="price">₹150</span></li>
+        <li><span>Dry Fruits Mastani</span><span class="price">₹150</span></li>
+      </ul>
+    </div>
+
+    <!-- Lassi -->
+    <div class="menu-card">
+      <h3>Lassi</h3>
+      <ul class="menu-list">
+        <li><span>Plain Lassi</span><span class="price">₹50</span></li>
+        <li><span>Sweet Lassi</span><span class="price">₹60</span></li>
+        <li><span>Rose Lassi</span><span class="price">₹60</span></li>
+      </ul>
+    </div>
+
+    <!-- Ice Cream -->
+    <div class="menu-card">
+      <h3>Ice Cream</h3>
+      <ul class="menu-list">
+        <li><span>Choco Bar</span><span class="price">₹30</span></li>
+        <li><span>Rajbhog</span><span class="price">₹30</span></li>
+        <li><span>Maratha Sunday</span><span class="price">₹60</span></li>
+        <li><span>Belgium Chocolate</span><span class="price">₹50</span></li>
+        <li><span>Cassata</span><span class="price">₹60</span></li>
+      </ul>
+    </div>
+
+  </div>
+</section>
   </section>  <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>Visit us at: Near Jammu and kashmir bank opp. PaithanGate, Aurangabad.431001</p>
