--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Great Lucky Juice Centre</title>
+  <title>Great Lucky Juice Centre &reg;</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fefefe;
-      color: #333;
+      background: #111;
+      color: #fff;
       line-height: 1.6;
     }
     header {
-      background: #ff6600;
+      background: #b30000;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -22,188 +23,180 @@
       margin: 0;
       font-size: 2rem;
     }
+    header p {
+      font-size: 1.2rem;
+      margin-top: 5px;
+      opacity: .9;
+    }
     section {
       padding: 40px 20px;
-      max-width: 1000px;
+      max-width: 1100px;
       margin: auto;
     }
     h2 {
       color: #ff6600;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
+      text-align: left;
     }
-    .menu {
+    /* Menu Styles */
+    .menu-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
-    .menu-item {
-      background: #fff3e6;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    .menu-card {
+      background: #222;
+      padding: 16px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+    .menu-card h3 {
+      margin: 0 0 12px;
+      color: #ff9933;
+      font-size: 1.2rem;
+      border-bottom: 1px solid rgba(255,255,255,.1);
+      padding-bottom: 6px;
+    }
+    .menu-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .menu-list li {
+      display: flex;
+      justify-content: space-between;
+      padding: 6px 0;
+      border-bottom: 1px dashed rgba(255,255,255,.2);
+    }
+    .menu-list li:last-child {
+      border-bottom: none;
+    }
+    .price {
+      color: #ffd27f;
+      font-weight: bold;
     }
     footer {
+      background: #000;
       text-align: center;
-      background: #333;
-      color: #fff;
-      padding: 15px;
-      margin-top: 20px;
+      padding: 20px;
+      margin-top: 40px;
+      font-size: 0.9rem;
+      border-top: 1px solid #333;
     }
-    .contact a {
+    .contact {
+      margin-top: 15px;
+    }
+    .contact p {
+      margin: 6px 0;
+    }
+    .btn {
       display: inline-block;
-      margin: 10px;
-      padding: 10px 20px;
+      margin-top: 10px;
+      padding: 10px 16px;
+      border-radius: 8px;
       background: #25d366;
-      color: white;
-      border-radius: 5px;
+      color: #fff;
       text-decoration: none;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Great Lucky Juice Centre</h1>
+    <h1>Great Lucky Juice Centre &reg;</h1>
     <p>Fresh • Healthy • Delicious</p>
-  </header>  <section id="about">
+  </header>
+
+  <section id="about">
     <h2>About Us</h2>
-    <p>Welcome to Great Lucky Juice Centre! We serve the freshest juices, milkshakes, and mocktails made from top-quality fruits. Our goal is to provide you with refreshing drinks that boost your health and energy.</p>
-  </section>  <section id="menu">
+    <p>Welcome to <b>Great Lucky Juice Centre &reg;</b>!  
+    Since 1988, we serve the freshest juices, milkshakes, mastanis, and mocktails made from top-quality fruits.  
+    Our goal is to refresh and energize you every time you visit.</p>
+  </section>
+
+  <section id="menu">
     <h2>Our Menu</h2>
-    <div class="menu">
-   /* --- MENU STYLES --- */
-.menu-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 18px;
-}
-.menu-card {
-  background: #2a1b12;
-  padding: 16px;
-  border-radius: 14px;
-  box-shadow: 0 2px 8px rgba(0,0,0,.25);
-}
-.menu-card h3 {
-  margin: 0 0 10px;
-  color: #ff8a33;
-}
-.menu-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.menu-list li {
-  display: flex;
-  justify-content: space-between;
-  gap: 8px;
-  padding: 8px 0;
-  border-bottom: 1px dashed rgba(255,255,255,.1);
-}
-.menu-list li:last-child { border-bottom: 0; }
-.price { white-space: nowrap; color: #ffd9b3; }
-.note { font-size: .9rem; opacity: .8; margin-top: 8px; }
-.btn {
-  display:inline-block; padding:10px 16px; border-radius:8px;
-  background:#25d366; color:#fff; text-decoration:none; font-weight:600;
-}
-.btn.alt { background:#444; }<section id="menu">
-  <h2>Our Menu</h2>
+    <div class="menu-grid">
 
-  <div class="menu-grid">
+      <!-- Juices -->
+      <div class="menu-card">
+        <h3>Juices</h3>
+        <ul class="menu-list">
+          <li><span>Pineapple</span><span class="price">₹50</span></li>
+          <li><span>Sweet Lime</span><span class="price">₹50</span></li>
+          <li><span>Apple</span><span class="price">₹60</span></li>
+          <li><span>Orange</span><span class="price">₹80</span></li>
+          <li><span>Ganga Jamuna</span><span class="price">₹60</span></li>
+          <li><span>Pomegranate</span><span class="price">₹80</span></li>
+        </ul>
+      </div>
 
-    <!-- Juices -->
-    <div class="menu-card">
-      <h3>Juice</h3>
-      <ul class="menu-list">
-        <li><span>Pineapple</span><span class="price">₹50</span></li>
-        <li><span>Sweet Lime (Mosambi)</span><span class="price">₹50</span></li>
-        <li><span>Apple</span><span class="price">₹60</span></li>
-        <li><span>Orange</span><span class="price">₹80</span></li>
-        <li><span>Ganga Jamuna</span><span class="price">₹60</span></li>
-        <li><span>Pomegranate</span><span class="price">₹90</span></li>
-      </ul>
-      <div class="note">* Make in mineral water</div>
+      <!-- Milk Shakes -->
+      <div class="menu-card">
+        <h3>Milk Shakes</h3>
+        <ul class="menu-list">
+          <li><span>Cocktail (Mix Fruit)</span><span class="price">₹40</span></li>
+          <li><span>Papaya</span><span class="price">₹30</span></li>
+          <li><span>Pineapple</span><span class="price">₹40</span></li>
+          <li><span>Chickoo</span><span class="price">₹50</span></li>
+          <li><span>Rose</span><span class="price">₹50</span></li>
+          <li><span>Fig (Anjeer)</span><span class="price">₹50</span></li>
+          <li><span>Mango</span><span class="price">₹60</span></li>
+          <li><span>Strawberry</span><span class="price">₹60</span></li>
+        </ul>
+      </div>
+
+      <!-- Special Milk Shakes -->
+      <div class="menu-card">
+        <h3>Special Milk Shakes</h3>
+        <ul class="menu-list">
+          <li><span>Chocolate Milk Shake</span><span class="price">₹60</span></li>
+          <li><span>Cold Coffee</span><span class="price">₹60</span></li>
+          <li><span>Butter Scotch</span><span class="price">₹70</span></li>
+          <li><span>Many More Flavours</span><span class="price">₹--</span></li>
+        </ul>
+      </div>
+
+      <!-- Mastani -->
+      <div class="menu-card">
+        <h3>Mastani</h3>
+        <ul class="menu-list">
+          <li><span>Mango Mastani</span><span class="price">₹100</span></li>
+          <li><span>Chocolate Mastani</span><span class="price">₹100</span></li>
+          <li><span>Kesar Mastani</span><span class="price">₹120</span></li>
+          <li><span>Dry Fruits Mastani</span><span class="price">₹150</span></li>
+          <li><span>Gulkhand Mastani</span><span class="price">₹120</span></li>
+        </ul>
+      </div>
+
+      <!-- Ice Cream -->
+      <div class="menu-card">
+        <h3>Ice Cream</h3>
+        <ul class="menu-list">
+          <li><span>Choco Bar</span><span class="price">₹30</span></li>
+          <li><span>Rajbhog</span><span class="price">₹30</span></li>
+          <li><span>Butterscotch Cone</span><span class="price">₹30</span></li>
+          <li><span>Belgium Chocolate</span><span class="price">₹50</span></li>
+          <li><span>Cassata</span><span class="price">₹60</span></li>
+        </ul>
+      </div>
+
     </div>
+  </section>
 
-    <!-- Pure Juice -->
-    <div class="menu-card">
-      <h3>Pure Juice</h3>
-      <ul class="menu-list">
-        <li><span>Sweet Lime</span><span class="price">₹70</span></li>
-        <li><span>Orange</span><span class="price">₹100</span></li>
-        <li><span>Ganga Jamuna</span><span class="price">₹70</span></li>
-      </ul>
-    </div>
-
-    <!-- Milk Shake -->
-    <div class="menu-card">
-      <h3>Milk Shake</h3>
-      <ul class="menu-list">
-        <li><span>Cocktail (Mix Fruit)</span><span class="price">₹40</span></li>
-        <li><span>Papaya</span><span class="price">₹30</span></li>
-        <li><span>Pineapple</span><span class="price">₹40</span></li>
-        <li><span>Chickoo</span><span class="price">₹50</span></li>
-        <li><span>Fig (Anjeer)</span><span class="price">₹50</span></li>
-        <li><span>Custard Apple (Sitaphal)</span><span class="price">₹100</span></li>
-      </ul>
-    </div>
-
-    <!-- Spl. Milk Shake -->
-    <div class="menu-card">
-      <h3>Spl. Milk Shake</h3>
-      <ul class="menu-list">
-        <li><span>Cocktail Mix Fruit</span><span class="price">₹60</span></li>
-        <li><span>Chocolate Milk Shake</span><span class="price">₹60</span></li>
-        <li><span>Cold Coffee</span><span class="price">₹60</span></li>
-        <li><span>Pineapple</span><span class="price">₹70</span></li>
-        <li><span>Butter Scotch</span><span class="price">₹70</span></li>
-      </ul>
-      <div class="note">+ and many more ice cream flavours</div>
-    </div>
-
-    <!-- Mastani -->
-    <div class="menu-card">
-      <h3>Mastani</h3>
-      <ul class="menu-list">
-        <li><span>Mango Mastani</span><span class="price">₹100</span></li>
-        <li><span>Chocolate Mastani</span><span class="price">₹100</span></li>
-        <li><span>Kesar Mastani</span><span class="price">₹100</span></li>
-        <li><span>Anjeer Badam</span><span class="price">₹130</span></li>
-        <li><span>Sitaphal (Custard Apple)</span><span class="price">₹150</span></li>
-        <li><span>Dry Fruits Mastani</span><span class="price">₹150</span></li>
-      </ul>
-    </div>
-
-    <!-- Lassi -->
-    <div class="menu-card">
-      <h3>Lassi</h3>
-      <ul class="menu-list">
-        <li><span>Plain Lassi</span><span class="price">₹50</span></li>
-        <li><span>Sweet Lassi</span><span class="price">₹60</span></li>
-        <li><span>Rose Lassi</span><span class="price">₹60</span></li>
-      </ul>
-    </div>
-
-    <!-- Ice Cream -->
-    <div class="menu-card">
-      <h3>Ice Cream</h3>
-      <ul class="menu-list">
-        <li><span>Choco Bar</span><span class="price">₹30</span></li>
-        <li><span>Rajbhog</span><span class="price">₹30</span></li>
-        <li><span>Maratha Sunday</span><span class="price">₹60</span></li>
-        <li><span>Belgium Chocolate</span><span class="price">₹50</span></li>
-        <li><span>Cassata</span><span class="price">₹60</span></li>
-      </ul>
-    </div>
-
-  </div>
-</section>
-  </section>  <section id="contact" class="contact">
+  <section id="contact">
     <h2>Contact Us</h2>
-    <p>Visit us at: Near Jammu and kashmir bank opp. PaithanGate, Aurangabad.431001</p>
-    <p>Phone: +91 9970123235</p>
-    <a href="https://wa.me/919970123235" target="_blank">Chat on WhatsApp</a>
-  </section>  <footer>
-    <p>© 2025 Great Lucky Juice Centre. All Rights Reserved.</p>
+    <div class="contact">
+      <p><b>Address:</b> Near Jammu and Kashmir Bank, Opp. Paithan Gate, Aurangabad - 431001</p>
+      <p><b>Phone:</b> +91 9970123235</p>
+      <a href="https://wa.me/919970123235" class="btn" target="_blank">Chat on WhatsApp</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Great Lucky Juice Centre &reg;. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
