--- a/index.html
+++ b/index.html
@@ -224,19 +224,37 @@
 
     </div>
   </section>
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact Us</h2>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact">
-      <p><b>Address:</b> Near Jammu and Kashmir Bank, Opp. Paithan Gate, Aurangabad - 431001</p>
-      <p><b>Phone:</b> +91 9970123235</p>
-      <a href="https://wa.me/919970123235" class="btn" target="_blank">Chat on WhatsApp</a>
-    </div>
-  </section>
+  <div class="contact">
+    <p>
+      <b>Address:</b>
+      <a href="https://maps.app.goo.gl/ncfvbB1S1v7ZpivT9"
+         target="_blank" rel="noopener">
+        V8JH+5HX, Jijamata Nagar, Sanmitra Colony, Paithan Gate,
+        Chhatrapati Sambhajinagar, Maharashtra 431001
+      </a>
+    </p>
 
-  <footer>
-    <p>© 2025 Great Lucky Juice Centre &reg;. All Rights Reserved.</p>
-  </footer>
+    <p><b>Phone:</b> <a href="tel:+919970123235">+91 9970123235</a></p>
+
+    <!-- action buttons -->
+    <div class="btn-row">
+      <a href="#menu" class="btn alt">View Menu</a>
+      <a href="https://maps.app.goo.gl/ncfvbB1S1v7ZpivT9" class="btn" target="_blank" rel="noopener">Get Directions</a>
+      <a href="tel:+919970123235" class="btn dark">Call Now</a>
+      <a href="https://wa.me/919970123235" class="btn" target="_blank" rel="noopener">Chat on WhatsApp</a>
+   <a href="https://www.instagram.com/great_lucky_juice_center/" 
+   class="btn" target="_blank" rel="noopener">
+   Follow on Instagram</a>
+      </div>        <!-- close .btn-row -->
+</div>        <!-- close .contact -->
+</section>    <!-- close #contact -->
+  <p>© 2025 Great Lucky Juice Centre &reg;. All Rights Reserved.</p>
+</footer>
+
 
 </body>
 </html>
