--- a/index.html
+++ b/index.html
@@ -231,10 +231,8 @@
   <div class="contact">
     <p>
       <b>Address:</b>
-      <a href="https://maps.app.goo.gl/ncfvbB1S1v7ZpivT9"
-         target="_blank" rel="noopener">
-        V8JH+5HX, Jijamata Nagar, Sanmitra Colony, Paithan Gate,
-        Chhatrapati Sambhajinagar, Maharashtra 431001
+      <a href="https://www.google.com/maps/dir/?api=1&destination=Great+Lucky+Juice+Centre+Near+Jammu+and+Kashmir+Bank%2C+Paithan+Gate%2C+Aurangabad+431001"
+   class="btn" target="_blank" rel="noopener">Get Directions</a>
       </a>
     </p>
 
