--- a/index.html
+++ b/index.html
@@ -1,258 +1,132 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Great Lucky Juice Centre &reg;</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Great Lucky Juice Centre — Fresh Juices in Paithan Gate, Aurangabad</title>
+  <meta name="description" content="Great Lucky Juice Centre: Fresh, healthy and delicious juices near Paithan Gate, Aurangabad. View menu, call or chat on WhatsApp to order." />
+  <meta name="theme-color" content="#c62828" />
+
+  <!-- LocalBusiness structured data -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FoodEstablishment",
+    "name":"Great Lucky Juice Centre",
+    "image":["https://greatluckyjuice.netlify.app/assets/logo.jpg"],
+    "@id":"https://greatluckyjuice.netlify.app",
+    "url":"https://greatluckyjuice.netlify.app",
+    "telephone":"+917020410249",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"Near Jammu & Kashmir Bank, Paithan Gate",
+      "addressLocality":"Aurangabad",
+      "addressRegion":"Maharashtra",
+      "postalCode":"431001",
+      "addressCountry":"IN"
+    },
+    "openingHours":"Mo,Tu,We,Th,Fr,Sa,Su 09:00-23:00",
+    "servesCuisine":"Juice, Beverages",
+    "priceRange":"₹"
+  }
+  </script>
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #111;
-      color: #fff;
-      line-height: 1.6;
+    :root{
+      --accent:#1bbf6b;
+      --brand:#c62828;
+      --bg:#0f0f0f;
+      --card:#111;
+      --text:#f4f4f4;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
     }
-    header {
-      background: #b30000;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 5px;
-      opacity: .9;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
-    h2 {
-      color: #ff6600;
-      margin-bottom: 20px;
-      text-align: left;
-    }
-    /* Menu Styles */
-    .menu-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .menu-card {
-      background: #222;
-      padding: 16px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-    }
-    .menu-card h3 {
-      margin: 0 0 12px;
-      color: #ff9933;
-      font-size: 1.2rem;
-      border-bottom: 1px solid rgba(255,255,255,.1);
-      padding-bottom: 6px;
-    }
-    .menu-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    .menu-list li {
-      display: flex;
-      justify-content: space-between;
-      padding: 6px 0;
-      border-bottom: 1px dashed rgba(255,255,255,.2);
-    }
-    .menu-list li:last-child {
-      border-bottom: none;
-    }
-    .price {
-      color: #ffd27f;
-      font-weight: bold;
-    }
-    footer {
-      background: #000;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-      font-size: 0.9rem;
-      border-top: 1px solid #333;
-    }
-    .contact {
-      margin-top: 15px;
-    }
-    .contact p {
-      margin: 6px 0;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 16px;
-      border-radius: 8px;
-      background: #25d366;
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;/* === HERO (Top Banner) === */
-.hero {
-  position: relative;
-  background-image: url('https://images.unsplash.com/photo-1528821154947-1aa3d1f1c4f3?q=80&w=1400&auto=format&fit=crop');
-  background-size: cover;
-  background-position: center;
-  color: #fff;
-  padding: 70px 20px;
-  margin: 0;
-}
-.hero::before{
-  content:"";
-  position:absolute; inset:0;
-  background: rgba(0,0,0,0.45);
-}
-.hero .inner{
-  position: relative; 
-  max-width: 1000px; 
-  margin: 0 auto;
-  text-align: center;
-}
-.hero h1{ margin: 0 0 8px; font-size: 2rem; }
-.hero p{ margin: 6px 0 20px; font-size: 1.1rem; opacity: .95; }
-.btn-row{ display:flex; flex-wrap:wrap; gap:10px; justify-content:center; }
-.btn{ display:inline-block; padding:10px 16px; border-radius:8px;
-  background:#25d366; color:#fff; text-decoration:none; font-weight:600; }
-.btn.alt{ background:#ff6600; }
-.btn.dark{ background:#333; }
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
+    a{color:inherit;text-decoration:none}
+    .wrap{max-width:980px;margin:0 auto;padding:18px}
+    header{background:var(--brand);padding:20px;border-radius:10px;color:white;text-align:center}
+    header h1{margin:0;font-size:22px;line-height:1.05}
+    header p{margin:8px 0 0;font-size:14px;opacity:.95}
+
+    .buttons{display:flex;gap:10px;flex-wrap:wrap;margin:16px 0}
+    .btn{flex:1;min-width:140px;background:var(--accent);color:#012; padding:12px;border-radius:10px;font-weight:600;text-align:center}
+    .btn.secondary{background:transparent;border:1px solid rgba(255,255,255,.06);color:var(--text)}
+
+    .card{background:var(--card);padding:14px;border-radius:10px;margin-bottom:12px}
+    h2{color:#ff9a3c;margin:12px 0}
+    p.lead{margin:0 0 10px;color:#ddd}
+
+    #menu ul{list-style:none;padding:0;margin:0}
+    #menu li{display:flex;justify-content:space-between;padding:10px 0;border-bottom:1px dashed rgba(255,255,255,.03)}
+    .price{opacity:.9}
+
+    footer{margin:18px 0 50px;color:#bbb;font-size:13px}
+
+    /* responsive */
+    @media(min-width:720px){
+      header h1{font-size:30px}
+      .buttons .btn{flex:0 0 auto}
+      .wrap{padding:28px}
     }
   </style>
 </head>
 <body>
+  <div class="wrap">
+    <header>
+      <h1>Great Lucky Juice Centre ®</h1>
+      <p>Fresh · Healthy · Delicious — Near Paithan Gate, Aurangabad</p>
+    </header>
 
-  <header>
-    <h1>Great Lucky Juice Centre &reg;</h1>
-    <p>Fresh • Healthy • Delicious</p>
-  </header><section class="hero">
-  <div class="inner">
-    <h1>Great Lucky Juice Centre ®</h1>
-    <p>Fresh • Healthy • Delicious</p>
-
-    <div class="btn-row">
-      <a href="#menu" class="btn alt">View Menu</a>
-      <a href="https://www.google.com/maps/search/?api=1&query=near%20Jammu%20and%20Kashmir%20Bank%20Opp.%20Paithan%20Gate%20Aurangabad%20431001" 
-         target="_blank" rel="noopener" class="btn dark">Get Directions</a>
-      <a href="tel:+919970123235" class="btn dark">Call Now</a>
-      <a href="https://wa.me/919970123235" target="_blank" class="btn">Chat on WhatsApp</a>
+    <div class="card">
+      <p class="lead"><strong>Open:</strong> 09:00 — 23:00 (Daily)</p>
+      <div class="buttons">
+        <a class="btn" href="tel:+917020410249">Call Now</a>
+        <a class="btn" target="_blank" href="https://wa.me/917020410249">Chat on WhatsApp</a>
+        <a class="btn secondary" target="_blank" href="https://www.google.com/maps/search/?api=1&query=Great+Lucky+Juice+Centre+Paithan+Gate+Aurangabad">Get Directions</a>
+      </div>
     </div>
+
+    <section id="about" class="card">
+      <h2>About Us</h2>
+      <p>Welcome to <strong>Great Lucky Juice Centre</strong> — your go-to spot for fresh, healthy and delicious juices near Paithan Gate. We use fresh fruits and natural ingredients. Quick service, pocket-friendly prices and friendly staff.</p>
+    </section>
+
+    <section id="menu" class="card">
+      <h2>Menu Highlights</h2>
+      <ul>
+        <li><span>Mix Special & Mango Mastani</span><span class="price">₹120</span></li>
+        <li><span>Cocktail Mix Fruit Juice</span><span class="price">₹80</span></li>
+        <li><span>Pineapple Juice</span><span class="price">₹80</span></li>
+        <li><span>Banana Shake</span><span class="price">₹70</span></li>
+        <li><span>Masala Lemon</span><span class="price">₹60</span></li>
+      </ul>
+      <p style="margin-top:10px;color:#bbb">(Full menu available at the shop. Prices subject to change.)</p>
+    </section>
+
+    <section class="card">
+      <h2>Photos</h2>
+      <p style="color:#bbb;margin:0 0 10px">Replace these placeholders with your real photos. Compress images to 100–200 KB for fast loading.</p>
+      <div style="display:flex;gap:8px;flex-wrap:wrap">
+        <img src="assets/juice1.jpg" alt="Mix Special" style="width:48%;border-radius:8px">
+        <img src="assets/shopfront.jpg" alt="Shop front" style="width:48%;border-radius:8px">
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Location</h2>
+      <p style="margin:0 0 10px">Near Jammu & Kashmir Bank, Paithan Gate, Aurangabad 431001</p>
+      <!-- Google Maps embed - replace the src with your own embed if you prefer -->
+      <div style="width:100%;height:220px;background:#111;border-radius:8px;overflow:hidden">
+        <iframe
+          width="100%" height="220" frameborder="0" style="border:0"
+          src="https://www.google.com/maps?q=Paithan+Gate+Aurangabad&output=embed" allowfullscreen>
+        </iframe>
+      </div>
+    </section>
+
+    <footer class="card">
+      <strong>Contact:</strong> +91 70204 10249 · <a href="mailto:info@greatluckyjuice.example">info@greatluckyjuice.example</a><br>
+      © Great Lucky Juice Centre — Near Paithan Gate, Aurangabad
+    </footer>
   </div>
-  </section>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Welcome to <b>Great Lucky Juice Centre &reg;</b>!  
-    Since 1988, we serve the freshest juices, milkshakes, mastanis, and mocktails made from top-quality fruits.  
-    Our goal is to refresh and energize you every time you visit.</p>
-  </section>
-
-  <section id="menu">
-    <h2>Our Menu</h2>
-    <div class="menu-grid">
-
-      <!-- Juices -->
-      <div class="menu-card">
-        <h3>Juices</h3>
-        <ul class="menu-list">
-          <li><span>Pineapple</span><span class="price">₹50</span></li>
-          <li><span>Sweet Lime</span><span class="price">₹50</span></li>
-          <li><span>Apple</span><span class="price">₹60</span></li>
-          <li><span>Orange</span><span class="price">₹80</span></li>
-          <li><span>Ganga Jamuna</span><span class="price">₹60</span></li>
-          <li><span>Pomegranate</span><span class="price">₹80</span></li>
-        </ul>
-      </div>
-
-      <!-- Milk Shakes -->
-      <div class="menu-card">
-        <h3>Milk Shakes</h3>
-        <ul class="menu-list">
-          <li><span>Cocktail (Mix Fruit)</span><span class="price">₹40</span></li>
-          <li><span>Papaya</span><span class="price">₹30</span></li>
-          <li><span>Pineapple</span><span class="price">₹40</span></li>
-          <li><span>Chickoo</span><span class="price">₹50</span></li>
-          <li><span>Rose</span><span class="price">₹50</span></li>
-          <li><span>Fig (Anjeer)</span><span class="price">₹50</span></li>
-          <li><span>Mango</span><span class="price">₹60</span></li>
-          <li><span>Strawberry</span><span class="price">₹60</span></li>
-        </ul>
-      </div>
-
-      <!-- Special Milk Shakes -->
-      <div class="menu-card">
-        <h3>Special Milk Shakes</h3>
-        <ul class="menu-list">
-          <li><span>Chocolate Milk Shake</span><span class="price">₹60</span></li>
-          <li><span>Cold Coffee</span><span class="price">₹60</span></li>
-          <li><span>Butter Scotch</span><span class="price">₹70</span></li>
-          <li><span>Many More Flavours</span><span class="price">₹--</span></li>
-        </ul>
-      </div>
-
-      <!-- Mastani -->
-      <div class="menu-card">
-        <h3>Mastani</h3>
-        <ul class="menu-list">
-          <li><span>Mango Mastani</span><span class="price">₹100</span></li>
-          <li><span>Chocolate Mastani</span><span class="price">₹100</span></li>
-          <li><span>Kesar Mastani</span><span class="price">₹120</span></li>
-          <li><span>Dry Fruits Mastani</span><span class="price">₹150</span></li>
-          <li><span>Gulkhand Mastani</span><span class="price">₹120</span></li>
-        </ul>
-      </div>
-
-      <!-- Ice Cream -->
-      <div class="menu-card">
-        <h3>Ice Cream</h3>
-        <ul class="menu-list">
-          <li><span>Choco Bar</span><span class="price">₹30</span></li>
-          <li><span>Rajbhog</span><span class="price">₹30</span></li>
-          <li><span>Butterscotch Cone</span><span class="price">₹30</span></li>
-          <li><span>Belgium Chocolate</span><span class="price">₹50</span></li>
-          <li><span>Cassata</span><span class="price">₹60</span></li>
-        </ul>
-      </div>
-
-    </div>
-  </section>
-<!-- CONTACT -->
-<section id="contact">
-  <h2>Contact Us</h2>
-
-  <div class="contact">
-    <p>
-      <b>Address:</b>
-      <a href="https://www.google.com/maps/dir/?api=1&destination=Great+Lucky+Juice+Centre+Near+Jammu+and+Kashmir+Bank%2C+Paithan+Gate%2C+Aurangabad+431001"
-   class="btn" target="_blank" rel="noopener">Get Directions</a>
-  </a>
-    </p>
-
-    <p><b>Phone:</b> <a href="tel:+919970123235">+91 9970123235</a></p>
-
-    <!-- action buttons -->
-    <div class="btn-row">
-      <a href="#menu" class="btn alt">View Menu</a>
-      <a href="https://maps.app.goo.gl/ncfvbB1S1v7ZpivT9" class="btn" target="_blank" rel="noopener">Get Directions</a>
-      <a href="tel:+919970123235" class="btn dark">Call Now</a>
-      <a href="https://wa.me/919970123235" class="btn" target="_blank" rel="noopener">Chat on WhatsApp</a>
-   <a href="https://www.instagram.com/great_lucky_juice_center/" 
-   class="btn" target="_blank" rel="noopener">
-   Follow on Instagram</a>
-      </div>        <!-- close .btn-row -->
-</div>        <!-- close .contact -->
-</section>    <!-- close #contact -->
-  <p>© 2025 Great Lucky Juice Centre &reg;. All Rights Reserved.</p>
-</footer>
-
-
 </body>
 </html>
