--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
     </section>
 
     <section class="card">
-      <h2>Photos</h2>
-      <p style="color:#bbb;margin:0 0 10px">Replace these placeholders with your real photos. Compress images to 100–200 KB for fast loading.</p>
-      <div style="display:flex;gap:8px;flex-wrap:wrap">
-        <img src="assets/juice1.jpg" alt="Mix Special" style="width:48%;border-radius:8px">
-        <img src="assets/shopfront.jpg" alt="Shop front" style="width:48%;border-radius:8px">
-      </div>
-    </section>
+  <h2>Photos</h2>
+
+  <div style="display:flex;gap:10px;flex-wrap:wrap">
+    <img src="Shop.jpg" alt="Great Lucky Juice Centre Shop Front" style="width:48%;border-radius:8px">
+    <img src="Menu.jpg" alt="Great Lucky Juice Centre Menu" style="width:48%;border-radius:8px">
+  </div>
+</section>
 
     <section class="card">
       <h2>Location</h2>
